--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <h2>FECHAMENTO</h2>
     <DIv>
-        <img src="c:\Users\User\Downloads\WhatsApp Image 2024-04-15 at 21.26.24.jpeg" alt="" width="600">
+        <img src="WhatsApp Image 2024-04-15 at 21.26.24.jpeg" alt="" width="600">
     </DIv>
     <table>
         <tr>
@@ -154,9 +154,17 @@
             <td id="sabado-area-1"></td>
             <td id="domingo-area-1"></td>
         </tr>
+        <div>
+            <h1>LEMBRANDO QUE O TRABALHO NAO E INDIVIDUAL E SIM COLETIVO.</h1>
+            <P>QUALQUER COISA CONSULTAR OS INSTRUTORES(PAULO E MARIA)</P>
+        </div>
         <!-- Adicione mais linhas para mais áreas -->
     </table>
     <script src="script.js"></script>
 </body>
+<BR>
+<FOoter>
+   <H1>UM BEIJO DO REIZINHO😘</H1> 
+</FOoter>
 
 </html>
