--- a/index.html
+++ b/index.html
@@ -1,170 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posicionamento de Pessoas</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th,
-        td {
-            border: 1px solid #dddddd;
-            text-align: center;
-            padding: 8px;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-        body{
-            text-align: center;
-            background-color: rgb(60, 131, 27);
-        }
-    </style>
+    <meta name="description" content="Dicas e materiais de estudo para o ENEM">
+    <title>Preparatório para o ENEM</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h2>FECHAMENTO</h2>
-    <DIv>
-        <img src="WhatsApp Image 2024-04-15 at 21.26.24.jpeg" alt="" width="600">
-    </DIv>
-    <table>
-        <tr>
-            <th></th>
-            <th>Segunda-feira</th>
-            <th>Terça-feira</th>
-            <th>Quarta-feira</th>
-            <th>Quinta-feira</th>
-            <th>Sexta-feira</th>
-            <th>Sábado</th>
-            <th>Domingo</th>
-        </tr>
-        <tr>
-            <td>BROILER</td>
-            <td id="segunda-area-1">PAULO</td>
-            <td id="terca-area-1">RENATO</td>
-            <td id="quarta-area-1">JADERSON</td>
-            <td id="quinta-area-1">MARIA</td>
-            <td id="sexta-area-1">MOISES</td>
-            <td id="sabado-area-1">ALLINY</td>
-            <td id="domingo-area-1"></td>
-        </tr>
-        <tr>
-            <td>WASCH</td>
-            <td id="segunda-area-1">JADERSON</td>
-            <td id="terca-area-1">MARIA</td>
-            <td id="quarta-area-1">MOISES</td>
-            <td id="quinta-area-1">PAULO</td>
-            <td id="sexta-area-1">ALLINY</td>
-            <td id="sabado-area-1">RENATO</td>
-            <td id="domingo-area-1"></td>
-        </tr>
-        <tr>
-            <td>COIFA</td>
-            <td id="segunda-area-1">N/A</td>
-            <td id="terca-area-1">PAULO</td>
-            <td id="quarta-area-1">N/A</td>
-            <td id="quinta-area-1">MARIA</td>
-            <td id="sexta-area-1">N/A</td>
-            <td id="sabado-area-1">MOISES</td>
-            <td id="domingo-area-1">N/A</td>
-        </tr>
-        <tr>
-            <td>BALCAO E MESAS</td>
-            <td id="segunda-area-1">ALLINY</td>
-            <td id="terca-area-1">JADERSON</td>
-            <td id="quarta-area-1">RENATO</td>
-            <td id="quinta-area-1">MOISES</td>
-            <td id="sexta-area-1">RENATO</td>
-            <td id="sabado-area-1">PAULO</td>
-            <td id="domingo-area-1"></td>
-        </tr>
-        <tr>
-            <td>SALAO E CHAO</td>
-            <td id="segunda-area-1">MOISES</td>
-            <td id="terca-area-1">???</td>
-            <td id="quarta-area-1">MARIA</td>
-            <td id="quinta-area-1">ALLINY</td>
-            <td id="sexta-area-1">???</td>
-            <td id="sabado-area-1">MARIA</td>
-            <td id="domingo-area-1"></td>
-        </tr>
-        <tr>
-            <td>TAYLOR</td>
-            <td id="segunda-area-1">N/A</td>
-            <td id="terca-area-1">N/A</td>
-            <td id="quarta-area-1">N/A</td>
-            <td id="quinta-area-1">N/A</td>
-            <td id="sexta-area-1">MOISES</td>
-            <td id="sabado-area-1">N/A</td>
-            <td id="domingo-area-1">N/A</td>
-        </tr>
-        <tr>
-            <td>FRITADEIRA</td>
-            <td id="segunda-area-1">N/A</td>
-            <td id="terca-area-1">N/A</td>
-            <td id="quarta-area-1">N/A</td>
-            <td id="quinta-area-1">N/A</td>
-            <td id="sexta-area-1">MARIA</td>
-            <td id="sabado-area-1">N/A</td>
-            <td id="domingo-area-1">N/A</td>
-        </tr>
-        <tr>
-            <td>APOIO</td>
-            <td id="segunda-area-1"></td>
-            <td id="terca-area-1"></td>
-            <td id="quarta-area-1"></td>
-            <td id="quinta-area-1"></td>
-            <td id="sexta-area-1"></td>
-            <td id="sabado-area-1">JADERSON</td>
-            <td id="domingo-area-1"></td>
-        </tr>
-        <tr>
-            <td>Área 1</td>
-            <td id="segunda-area-1"></td>
-            <td id="terca-area-1"></td>
-            <td id="quarta-area-1"></td>
-            <td id="quinta-area-1"></td>
-            <td id="sexta-area-1"></td>
-            <td id="sabado-area-1"></td>
-            <td id="domingo-area-1"></td>
-        </tr>
-        <tr>
-            <td>Área 1</td>
-            <td id="segunda-area-1"></td>
-            <td id="terca-area-1"></td>
-            <td id="quarta-area-1"></td>
-            <td id="quinta-area-1"></td>
-            <td id="sexta-area-1"></td>
-            <td id="sabado-area-1"></td>
-            <td id="domingo-area-1"></td>
-        </tr>
-        <tr>
-            <td>Área 1</td>
-            <td id="segunda-area-1"></td>
-            <td id="terca-area-1"></td>
-            <td id="quarta-area-1"></td>
-            <td id="quinta-area-1"></td>
-            <td id="sexta-area-1"></td>
-            <td id="sabado-area-1"></td>
-            <td id="domingo-area-1"></td>
-        </tr>
-        <div>
-            <h1>LEMBRANDO QUE O TRABALHO NAO E INDIVIDUAL E SIM COLETIVO.</h1>
-            <P>QUALQUER COISA CONSULTAR OS INSTRUTORES(PAULO E MARIA)</P>
+    <header>
+        <div class="logo">
+            <h1>Respostas vazadas do Enem</h1>
         </div>
-        <!-- Adicione mais linhas para mais áreas -->
-    </table>
-    <script src="script.js"></script>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#materiais">Materiais</a></li>
+                <li><a href="#cursos">Cursos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="hero">
+        <h2>Prepare-se para o ENEM de forma eficaz!</h2>
+        <p>Encontre aqui todas respostas do Enem</p>
+        <p>Opçao de estorno disponivel</p>
+        <a href="#materiais" class="buy-button">Garanta as suas respostas</a>
+    </section>
+
+    <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p>Somos uma equipe de educadores especializados em ENEM, oferecendo conteúdo de qualidade para quem quer se
+            destacar no exame.</p>
+    </section>
+
+    <section id="materiais">
+        <h2>Materiais de Estudo</h2>
+        <ul>
+            <li><a href="https://www.enemaction.com.br/?gad_source=1&gclid=Cj0KCQjwveK4BhD4ARIsAKy6pMLutnhyiZpG0IrvWdsqMYw2eYFRbbtzJboUJh5ZatLM-WujrTlpwKcaAhIwEALw_wcB">Matemática - Questões Comentadas</a></li>
+            <li><a href="https://www.todamateria.com.br/dicas-de-redacao/">Redação - Dicas e Exemplos</a></li>
+            <li><a href="https://vestibular.brasilescola.uol.com.br/enem/simulado">Simulado Completo</a></li>
+        </ul>
+    </section>
+
+    <section id="cursos">
+        <h2>Cursos Preparatórios</h2>
+        <p>Conheça nossos cursos completos, com aulas em vídeo, simulados e acompanhamento personalizado.</p>
+        <a href="#" class="btn">Saiba mais</a>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 ENEM Preparatório. Todos os direitos reservados.</p>
+    </footer>
 </body>
-<BR>
-<FOoter>
-   <H1>UM BEIJO DO REIZINHO😘</H1> 
-</FOoter>
 
 </html>
