--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </header>
 
     <section id="hero">
-        <h2>Prepare-se para o ENEM de forma eficaz!</h2>
+        <h2>Todas as respostas e Redaçao do Enem 2024</h2>
         <p>Encontre aqui todas respostas do Enem</p>
         <p>Opçao de estorno disponivel</p>
-        <a href="#materiais" class="buy-button">Garanta as suas respostas</a>
+        <a href="https://go.perfectpay.com.br/PPU38CP6172" class="buy-button">Garanta as suas respostas</a>
     </section>
 
     <section id="sobre">
