--- a/index.html
+++ b/index.html
@@ -1,59 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dicas e materiais de estudo para o ENEM">
-    <title>Preparatório para o ENEM</title>
+    <title>Transforme Seu Corpo Hoje</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <h1>Respostas vazadas do Enem</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#materiais">Materiais</a></li>
-                <li><a href="#cursos">Cursos</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
+    <header class="hero-section">
+        <img src="Captura de tela 2024-11-14 151119.png" alt="">
+        <h1>Alcance o Corpo dos Seus Sonhos</h1>
+        <p>Transforme sua vida com o nosso programa de emagrecimento comprovado. Resultados rápidos, sustentáveis e
+            saudáveis!</p>
+            <img src="emag1.png" alt="">
+            <br>
+            <img src="emag2.png" alt="">
+            <br>
+        <a href="https://go.perfectpay.com.br/PPU38CP8D2C" class="cta-button">ADQUIRIR</a>
     </header>
 
-    <section id="hero">
-        <h2>Todas as respostas e Redaçao do Enem 2024</h2>
-        <p>Encontre aqui todas respostas do Enem</p>
-        <p>Opçao de estorno disponivel</p>
-        <a href="https://go.perfectpay.com.br/PPU38CP6172" class="buy-button">Garanta as suas respostas</a>
-    </section>
-
-    <section id="sobre">
-        <h2>Sobre Nós</h2>
-        <p>Somos uma equipe de educadores especializados em ENEM, oferecendo conteúdo de qualidade para quem quer se
-            destacar no exame.</p>
-    </section>
-
-    <section id="materiais">
-        <h2>Materiais de Estudo</h2>
+    <section id="saiba-mais" class="content-section">
+        <h2>Por que Escolher Nosso Programa?</h2>
+        <p>Com nossa metodologia, você vai perder peso de forma natural, sem passar fome e com estratégias que realmente
+            funcionam.</p>
         <ul>
-            <li><a href="https://www.enemaction.com.br/?gad_source=1&gclid=Cj0KCQjwveK4BhD4ARIsAKy6pMLutnhyiZpG0IrvWdsqMYw2eYFRbbtzJboUJh5ZatLM-WujrTlpwKcaAhIwEALw_wcB">Matemática - Questões Comentadas</a></li>
-            <li><a href="https://www.todamateria.com.br/dicas-de-redacao/">Redação - Dicas e Exemplos</a></li>
-            <li><a href="https://vestibular.brasilescola.uol.com.br/enem/simulado">Simulado Completo</a></li>
+            <li>Planos personalizados e flexíveis</li>
+            <li>Consultoria de especialistas em nutrição e treino</li>
+            <li>Apoio constante para manter sua motivação</li>
         </ul>
     </section>
 
-    <section id="cursos">
-        <h2>Cursos Preparatórios</h2>
-        <p>Conheça nossos cursos completos, com aulas em vídeo, simulados e acompanhamento personalizado.</p>
-        <a href="#" class="btn">Saiba mais</a>
-    </section>
-
     <footer>
-        <p>&copy; 2024 ENEM Preparatório. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Seu Nome ou Marca. Todos os direitos reservados.</p>
     </footer>
 </body>
 
