--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <header class="hero-section">
-        <img src="Captura de tela 2024-11-14 151119.png" alt="">
+        <img src="Captura de tela 2024-11-14 151119.png" alt="" height="200" width="300">
         <h1>Alcance o Corpo dos Seus Sonhos</h1>
         <p>Transforme sua vida com o nosso programa de emagrecimento comprovado. Resultados rápidos, sustentáveis e
             saudáveis!</p>
-            <img src="emag1.png" alt="">
+            <img src="emag1.png" alt="" width="300" height="200">
             <br>
-            <img src="emag2.png" alt="">
+            <img src="emag2.png" alt="" width="300" height="200">
             <br>
         <a href="https://go.perfectpay.com.br/PPU38CP8D2C" class="cta-button">ADQUIRIR</a>
     </header>
