--- a/index.html
+++ b/index.html
@@ -1,40 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transforme Seu Corpo Hoje</title>
     <link rel="stylesheet" href="styles.css">
+    <title>tem que ser maior de 18 anos</title>
+    <h1>PROTEGIDO POR DIREITOS AUTORAIS</h1>
 </head>
-
 <body>
-    <header class="hero-section">
-        <img src="Captura de tela 2024-11-14 151119.png" alt="" height="200" width="300">
-        <h1>Alcance o Corpo dos Seus Sonhos</h1>
-        <p>Transforme sua vida com o nosso programa de emagrecimento comprovado. Resultados rápidos, sustentáveis e
-            saudáveis!</p>
-            <img src="emag1.png" alt="" width="300" height="200">
-            <br>
-            <img src="emag2.png" alt="" width="300" height="200">
-            <br>
-        <a href="https://go.perfectpay.com.br/PPU38CP8D2C" class="cta-button">ADQUIRIR</a>
-    </header>
-
-    <section id="saiba-mais" class="content-section">
-        <h2>Por que Escolher Nosso Programa?</h2>
-        <p>Com nossa metodologia, você vai perder peso de forma natural, sem passar fome e com estratégias que realmente
-            funcionam.</p>
-        <ul>
-            <li>Planos personalizados e flexíveis</li>
-            <li>Consultoria de especialistas em nutrição e treino</li>
-            <li>Apoio constante para manter sua motivação</li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Seu Nome ou Marca. Todos os direitos reservados.</p>
-    </footer>
+    <main>
+        <div>
+            <a href="https://novinhas-tech.preview-domain.com/" class="animated-button1">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                voce tem mais de 18 anos?
+              </a>
+        </div>
+    </main>
+    
 </body>
-
 </html>
